--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "expo-module build",
     "clean": "expo-module clean",
     "test": "expo-module test",
+    "lint": "eslint .",
     "prepare": "expo-module prepare",
     "prepublishOnly": "expo-module prepublishOnly",
     "expo-module": "expo-module"
@@ -30,10 +31,11 @@
     "@typescript-eslint/eslint-plugin": "5.20.0",
     "@typescript-eslint/parser": "5.20.0",
     "@typescript-eslint/typescript-estree": "5.20.0",
-    "expo-module-scripts": "^2.0.0",
     "eslint": "8.10.0",
     "eslint-config-prettier": "6.0.0",
-    "jest": "26.6.3"
+    "expo-module-scripts": "^2.0.0",
+    "jest": "26.6.3",
+    "prettier": "^2.7.1"
   },
   "peerDependencies": {
     "@datadog/mobile-react-native": ">=1.0.0",
