--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "expo-module build",
     "clean": "expo-module clean",
+    "check-licenses": "node bin/check-licenses.js",
     "test": "expo-module test",
     "lint": "eslint .",
     "prepare": "expo-module prepare",
