--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "@datadog/mobile-react-native": "latest",
     "@types/jest": "26.0.19",
     "@typescript-eslint/eslint-plugin": "5.20.0",
-    "@typescript-eslint/parser": "5.20.0",
+    "@typescript-eslint/parser": "^5.60.1",
     "@typescript-eslint/typescript-estree": "5.20.0",
-    "eslint": "8.10.0",
-    "eslint-config-prettier": "6.0.0",
-    "expo-module-scripts": "^3.0.7",
+    "eslint": "8.44.0",
+    "eslint-config-prettier": "^8.8.0",
+    "expo-module-scripts": "^3.0.9",
     "jest": "26.6.3",
     "prettier": "^2.7.1"
   },
