--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "author": "Datadog (https://github.com/DataDog)",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "7.12.15",
+    "@babel/plugin-transform-runtime": "^7.24.6",
     "@datadog/mobile-react-native": "latest",
     "@types/jest": "26.0.19",
     "@typescript-eslint/eslint-plugin": "5.20.0",
@@ -35,7 +35,7 @@
     "eslint": "8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "expo-module-scripts": "^3.0.9",
-    "jest": "26.6.3",
+    "jest": "^29.7.0",
     "jest-watch-typeahead": "0.6.5",
     "prettier": "^2.7.1"
   },
