--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,15 +7,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: Production
+    permissions:
+            id-token: write
     steps:
     - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
     - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
       with:
-        node-version: '18.x'
-    - run: yarn config set npmAuthToken $NPM_PUBLISH_TOKEN
-      env:
-        NPM_PUBLISH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
+        node-version: '24.x'
     - run: yarn clean
     - run: yarn build-ci
     - run: yarn pack
-    - run: npm publish
+    - run: npm publish --dry-run
