--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,9 +15,8 @@ jobs:
     - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
       with:
         node-version: '24.x'
-    - run: yarn --version
     - run: yarn install --immutable
     - run: yarn clean
     - run: yarn build-ci
     - run: yarn pack
-    - run: npm publish --dry-run
+    - run: npm publish
