--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@typescript-eslint/typescript-estree": "5.20.0",
     "eslint": "8.57.1",
     "eslint-config-prettier": "^8.10.2",
+    "eslint-plugin-prettier": "^5.5.5",
     "expo-module-scripts": "^3.0.9",
     "jest": "^29.7.0",
     "jest-watch-typeahead": "0.6.5",
