--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "expo": "54.x"
   },
   "resolutions": {
-    "json5": "^1.0.2"
+    "json5": "^1.0.2",
+    "@babel/traverse": "^7.23.2"
   },
   "packageManager": "yarn@3.6.1"
 }
