--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
   },
   "resolutions": {
     "json5": "^1.0.2",
-    "@babel/traverse": "^7.23.2"
+    "@babel/traverse": "^7.23.2",
+    "tough-cookie": "^4.1.3"
   },
   "packageManager": "yarn@3.6.1"
 }
