--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
   "resolutions": {
     "json5": "^1.0.2",
     "@babel/traverse": "^7.23.2",
-    "tough-cookie": "^4.1.3"
+    "tough-cookie": "^4.1.3",
+    "ws": "^8.17.1"
   },
   "packageManager": "yarn@3.6.1"
 }
