--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "json5": "^1.0.2",
     "@babel/traverse": "^7.23.2",
     "tough-cookie": "^4.1.3",
-    "ws": "^8.17.1"
+    "ws": "^8.17.1",
+    "tar": "^7.5.7"
   },
   "packageManager": "yarn@3.6.1"
 }
