--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "@babel/traverse": "^7.23.2",
     "tough-cookie": "^4.1.3",
     "ws": "^8.17.1",
-    "tar": "^7.5.7"
+    "tar": "^7.5.7",
+    "braces": "^3.0.3"
   },
   "packageManager": "yarn@3.6.1"
 }
