--- a/package.json
+++ b/package.json
@@ -36,9 +36,8 @@
     "eslint": "8.57.1",
     "eslint-config-prettier": "^8.10.2",
     "eslint-plugin-prettier": "^5.5.5",
-    "expo-module-scripts": "^3.0.9",
+    "expo-module-scripts": "^5.0.8",
     "jest": "^29.7.0",
-    "jest-watch-typeahead": "0.6.5",
     "prettier": "^2.8.8"
   },
   "peerDependencies": {
@@ -51,7 +50,8 @@
     "tough-cookie": "^4.1.3",
     "ws": "^8.17.1",
     "tar": "^7.5.7",
-    "braces": "^3.0.3"
+    "braces": "^3.0.3",
+    "cacache/glob": "^10.5.0"
   },
   "packageManager": "yarn@3.6.1"
 }
