--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "ws": "^8.17.1",
     "tar": "^7.5.7",
     "braces": "^3.0.3",
-    "cacache/glob": "^10.5.0"
+    "cacache/glob": "^10.5.0",
+    "ip": "^2.0.1"
   },
   "packageManager": "yarn@3.6.1"
 }
