--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "tar": "^7.5.7",
     "braces": "^3.0.3",
     "cacache/glob": "^10.5.0",
-    "ip": "^2.0.1"
+    "ip": "^2.0.1",
+    "lodash": "^4.17.23"
   },
   "packageManager": "yarn@3.6.1"
 }
