--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "braces": "^3.0.3",
     "cacache/glob": "^10.5.0",
     "ip": "^2.0.1",
-    "lodash": "^4.17.23"
+    "lodash": "^4.17.23",
+    "js-yaml": "^4.1.1"
   },
   "packageManager": "yarn@3.6.1"
 }
