--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.29.0",
+    "@babel/runtime": "^7.28.6",
     "@datadog/mobile-react-native": "latest",
     "@types/jest": "26.0.24",
     "@typescript-eslint/eslint-plugin": "5.20.0",
