--- a/package.json
+++ b/package.json
@@ -31,12 +31,10 @@
     "@babel/runtime": "^7.28.6",
     "@datadog/mobile-react-native": "latest",
     "@types/jest": "26.0.24",
-    "@typescript-eslint/eslint-plugin": "5.20.0",
-    "@typescript-eslint/parser": "^5.60.1",
-    "@typescript-eslint/typescript-estree": "5.20.0",
-    "eslint": "8.57.1",
-    "eslint-config-prettier": "^8.10.2",
-    "eslint-plugin-prettier": "^5.5.5",
+    "@typescript-eslint/eslint-plugin": "^8.56.0",
+    "@typescript-eslint/parser": "^8.56.0",
+    "@typescript-eslint/typescript-estree": "8.56.0",
+    "eslint": "^8.57.1",
     "expo-module-scripts": "^5.0.8",
     "jest": "^29.7.0",
     "prettier": "^2.8.8"
